# redmine-cli

./: .gitignore  README.md  pyproject.toml
skill/: SKILL.md
src/redmine_cli/: __init__.py  client.py  config.py  issues.py  main.py  models.py  projects.py  time_entries.py  users.py
tests/: conftest.py  test_client.py  test_config.py  test_models.py
