[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redmine-cli"
version = "0.1.0"
description = "A CLI tool for managing Redmine issues, projects, users, and time entries"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
redmine = "redmine_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
